# ML_Clustering_Evaluation

./: .gitignore  CMakeLists.txt  Cluster.cpp  Cluster.h  Evaluation.cpp  Evaluation.h  Point.cpp  Point.h  README.md
input/: Iris0,52  IrisTest  absenteeism  cardio  iris
